Updated example source code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ import React from 'react';
 import { render } from 'react-dom';
 import { Router, Route, hashHistory } from 'react-router';
 import MetisMenu from 'react-metismenu';
-import RouterLink from '../src/RouterLink';
+import RouterLink from 'react-metismenu-router-link';
 
 const Menu1 = () =&gt; &lt;div&gt;&lt;u&gt;Menu 1 View&lt;/u&gt;&lt;/div&gt;;
 const Menu2 = () =&gt; &lt;div&gt;&lt;i&gt;Menu 2 View&lt;/i&gt;&lt;/div&gt;;
