--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="react-metismenu.min.css">
+		<link rel="stylesheet" type="text/css" href="react-metismenu-standart.min.css">
 		<title>react-metismenu - Router Link Extension - Dev Server</title>
 	</head>
 	<body>
