Added v1.0.0 demo page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/solarized-dark.min.css">
+    <link rel="stylesheet" type="text/css" href="react-metismenu-standart.min.css">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
 		<title>react-metismenu - Router Link Extension - Demo Page</title>
@@ -14,8 +15,8 @@
     <div style="float:left;">
       <h2>Library Versions</h2>
       <ul>
-        <li>react-metismenu <b>v0.4.2</b></li>
-        <li>react-metismenu-router-link <b>v0.1.0</b></li>
+        <li>react-metismenu <b>v1.1.1</b></li>
+        <li>react-metismenu-router-link <b>v1.0.0</b></li>
         <li>react-router <b>v2.7.0</b></li>
       </ul>
       <h2>Application</h2>
